--- a/conf/redis1.conf
+++ b/conf/redis1.conf
@@ -17,5 +17,5 @@ cluster-announce-bus-port 17000
 ##持久化模式
 appendonly yes
 #密码设置
-requirepass 92F1q99f9CnrkAuwJPItdj8brqeMtN3r
-masterauth 92F1q99f9CnrkAuwJPItdj8brqeMtN3r
+requirepass password
+masterauth password
